# Synthese_Hotel

./: .gitignore  README.md
admin/: choice.php  consums-price.php  consums.php  dashboard.php  index.php  login.php  logout.php  panel.php  room-price.php  signup.php  user.php  users.php
admin/config/: config.php  config.php.example
admin/controllers/: ChoiceController.php  base_init.php  permsMiddleware.php
admin/js/: darkmode.js  menu.js  panel-dropdown.js  support.js
admin/libs/: database.php
admin/models/: Chambre.php  Conso.php  (+7 more)
clients/: .htaccess  index.html  index.php  info_chambre.php  info_hotels.php  signup.php
models/: creation.sql  delete.sql  insertion.sql  reset.sql  user.sql
schemas/: creation.sql  insertion.sql
websocket/: CMakeLists.txt  Main.cpp
websocket/include/: Includes.hpp  Main.hpp  WebSocketServer.hpp
websocket/include/routes/: AdminConnection.hpp  Close.hpp  Connection.hpp  Message.hpp  Rooms.hpp
websocket/include/services/: Message.hpp  Room.hpp  Service.hpp  User.hpp
websocket/include/structs/: Message.hpp  Room.hpp  Struct.hpp  User.hpp
websocket/include/utils/: Debug.hpp  UUID.hpp
websocket/src/: WebSocketServer.cpp
websocket/src/routes/: AdminConnection.cpp  Close.cpp  Connection.cpp  Message.cpp  Rooms.cpp
websocket/src/services/: Room.cpp  User.cpp
websocket/src/utils/: Debug.cpp  UUID.cpp
websocket/support_example/admin/: index.html
websocket/support_example/admin/js/: support.js
websocket/support_example/client/: index.html
websocket/support_example/client/js/: support.js
www/: index.php
(+196 files in other folders)
